* aoiro 0.3.2 ビルド環境をJava11に変更しました。依存ライブラリのバージョンを上げました。32ビットのサポートを終了し、今後は64ビット版ビルドのみとします。